make manifest + make dependencyManagement entry